Support for IE7.
- Upgraded Microsoft.Owin to 1.1.0-beta2.
- Added Json2 to support IE7.
- Added event.preventDefault to support IE7.
- Added timestamp to index page, so you can see if it's being reloaded.

--- a/Chat/Views/Home/Index.html
+++ b/Chat/Views/Home/Index.html
@@ -5,45 +5,53 @@
     <meta charset="utf-8" />
     <title>Chat</title>
 
-    <link rel="stylesheet" type="text/css" href="/Content/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/Content/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" type="text/css" href="@Path['~/Content/bootstrap.min.css']" />
+    <link rel="stylesheet" type="text/css" href="@Path['~/Content/bootstrap-responsive.min.css']" />
 </head>
 <body>
     <div class="container">
         <div class="well well-large span10 text-center">
             <h1>Say something interesting</h1>
+            <p>@Model.UtcNow</p>
         </div>
         
         <div class="span10">
             <form class="form-horizontal" id="form">
                 <input type="text" class="span8" id="message" placeholder="Type something" />
-                <input type="button" class="btn btn-primary span2" value="Send" />
+                <input type="submit" class="btn btn-primary span2" value="Send" />
             </form>
         </div>
     
         <div class="span10">
             <ul id="messages" class="unstyled">
-                <li>Messages go here.</li>
             </ul>
         </div>
     </div>
 
-    <script src="/Scripts/jquery-1.9.1.min.js"></script>
-    <script src="/Scripts/jquery.signalR-1.1.2.min.js"></script>
-    <script src="/Scripts/bootstrap.min.js"></script>
-    <script src="/signalr/hubs"></script>
+    <script src="@Path['~/Scripts/jquery-1.9.1.min.js']"></script>
+    <script src="@Path['~/Scripts/json2.min.js']"></script>
+    <script src="@Path['~/Scripts/jquery.signalR-1.1.2.min.js']"></script>
+    <script src="@Path['~/Scripts/bootstrap.min.js']"></script>
+    <script src="@Path['~/signalr/hubs']"></script>
 
     <script>
-        $(function () {
+        function appendMessage(message) {
+            var x = $('<div></div>').text(message).html();
+            $('#messages').append('<li>' + x + '</li>');
+        }
+
+        $(document).ready(function () {
             var chatHub = $.connection.chatHub;
 
             chatHub.client.broadcastMessage = function (message) {
-                var x = $('<div></div>').text(message).html();
-                $('#messages').append('<li>' + x + '</li>');
+                appendMessage(message);
             };
 
             $.connection.hub.start().done(function () {
-                $('#form').submit(function () {
+                appendMessage('Connected.');
+                $('#form').submit(function (event) {
+                    event.preventDefault();
+
                     var message = $('#message').val();
                     chatHub.server.send(message);
                     $('#message').val('');
